Fix include Analysis Team + owner in CC when case linked to event